--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,43 +1,69 @@
 # 2023-11-13
 
-共 242 条
+共 262 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 16:00:56 GMT+0800 (China Standard Time) -->
-1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
+<!-- 最后更新时间 Mon Nov 13 2023 17:00:42 GMT+0800 (China Standard Time) -->
 1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
-1. [流感高发季防治指南请收好](https://so.toutiao.com/search?keyword=流感高发季防治指南请收好)
-1. [福建一原区长水上餐厅就餐时落水身亡](https://so.toutiao.com/search?keyword=福建一原区长水上餐厅就餐时落水身亡)
 1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
+1. [流感高发季防治指南请收好](https://so.toutiao.com/search?keyword=流感高发季防治指南请收好)
+1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
 1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
-1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
-1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
-1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
-1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
-1. [腾讯辟谣马化腾称阿里云不如腾讯云](https://so.toutiao.com/search?keyword=腾讯辟谣马化腾称阿里云不如腾讯云)
+1. [河北一罐车疑气体泄漏车顶直接爆开](https://so.toutiao.com/search?keyword=河北一罐车疑气体泄漏车顶直接爆开)
+1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [知情人称缅北电诈成员劝降视频属实](https://so.toutiao.com/search?keyword=知情人称缅北电诈成员劝降视频属实)
+1. [大连万达集团被强制执行1.6亿](https://so.toutiao.com/search?keyword=大连万达集团被强制执行1.6亿)
+1. [重庆辟谣一商场现“最强钉子户”](https://so.toutiao.com/search?keyword=重庆辟谣一商场现“最强钉子户”)
 1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
 1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
 1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
-1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
-1. [收评：A股三大指数震荡小幅收涨](https://so.toutiao.com/search?keyword=收评：A股三大指数震荡小幅收涨)
+1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
+1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
 1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
-1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
-1. [上官正义再次追问商丘妇幼保健院](https://so.toutiao.com/search?keyword=上官正义再次追问商丘妇幼保健院)
-1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
+1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
+1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
 1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
 1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
+1. [以色列军车闯巴勒斯坦遇爆炸袭击](https://so.toutiao.com/search?keyword=以色列军车闯巴勒斯坦遇爆炸袭击)
+1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
+1. [外交部：支持旨在恢复巴以和平举措](https://so.toutiao.com/search?keyword=外交部：支持旨在恢复巴以和平举措)
+1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
+1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
+1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
+1. [企业家被约谈后跳楼身亡 公司发讣告](https://so.toutiao.com/search?keyword=企业家被约谈后跳楼身亡+公司发讣告)
+1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
+1. [中国气象局：北方农业需防降温影响](https://so.toutiao.com/search?keyword=中国气象局：北方农业需防降温影响)
+1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
+1. [沃格尔：比尔是个战士](https://so.toutiao.com/search?keyword=沃格尔：比尔是个战士)
+1. [智能手机或将于2050年退场](https://so.toutiao.com/search?keyword=智能手机或将于2050年退场)
+1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
+1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [范弗里特：申京已经做得足够好了](https://so.toutiao.com/search?keyword=范弗里特：申京已经做得足够好了)
+1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
+1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
+1. [上官正义再次追问商丘妇幼保健院](https://so.toutiao.com/search?keyword=上官正义再次追问商丘妇幼保健院)
+1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
+1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
+1. [天津助学金当事人被举报利用打赏敛财](https://so.toutiao.com/search?keyword=天津助学金当事人被举报利用打赏敛财)
+1. [上官正义受到国家卫健委的邀请](https://so.toutiao.com/search?keyword=上官正义受到国家卫健委的邀请)
+1. [女篮奥运资格赛对手出炉](https://so.toutiao.com/search?keyword=女篮奥运资格赛对手出炉)
+1. [埃尔多安卷入土耳其司法危机](https://so.toutiao.com/search?keyword=埃尔多安卷入土耳其司法危机)
+1. [阿德巴约24分11板 热火118-113马刺](https://so.toutiao.com/search?keyword=阿德巴约24分11板+热火118-113马刺)
+1. [刘亦菲上海拍戏路透](https://so.toutiao.com/search?keyword=刘亦菲上海拍戏路透)
+1. [大陆货轮经台湾海峡被喊话后霸气回话](https://so.toutiao.com/search?keyword=大陆货轮经台湾海峡被喊话后霸气回话)
+1. [德国的“国家理性”真的理性吗](https://so.toutiao.com/search?keyword=德国的“国家理性”真的理性吗)
+1. [福建一原区长水上餐厅就餐时落水身亡](https://so.toutiao.com/search?keyword=福建一原区长水上餐厅就餐时落水身亡)
+1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
+1. [腾讯辟谣马化腾称阿里云不如腾讯云](https://so.toutiao.com/search?keyword=腾讯辟谣马化腾称阿里云不如腾讯云)
+1. [收评：A股三大指数震荡小幅收涨](https://so.toutiao.com/search?keyword=收评：A股三大指数震荡小幅收涨)
+1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
 1. [伊朗：应看清美阻挠加沙停火真面目](https://so.toutiao.com/search?keyword=伊朗：应看清美阻挠加沙停火真面目)
 1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
 1. [马斯克：中国聪明勤奋的人比美国多](https://so.toutiao.com/search?keyword=马斯克：中国聪明勤奋的人比美国多)
-1. [大连万达集团被强制执行1.6亿](https://so.toutiao.com/search?keyword=大连万达集团被强制执行1.6亿)
-1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
-1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
-1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
 1. [加沙最大医院手术室已完全停用](https://so.toutiao.com/search?keyword=加沙最大医院手术室已完全停用)
-1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
 1. [曝擎天巡航导弹已交台空军部署](https://so.toutiao.com/search?keyword=曝擎天巡航导弹已交台空军部署)
-1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
-1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
 1. [中国扩大开放如何惠及世界](https://so.toutiao.com/search?keyword=中国扩大开放如何惠及世界)
 1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
 1. [胡锡进为去刚果金的年轻人壮行](https://so.toutiao.com/search?keyword=胡锡进为去刚果金的年轻人壮行)
@@ -45,12 +71,8 @@
 1. [雷军：曾觉得USB不太重要被骂惨了](https://so.toutiao.com/search?keyword=雷军：曾觉得USB不太重要被骂惨了)
 1. [美德媒体指控乌军官涉北溪管道爆炸](https://so.toutiao.com/search?keyword=美德媒体指控乌军官涉北溪管道爆炸)
 1. [本周初降温重心转移至南方](https://so.toutiao.com/search?keyword=本周初降温重心转移至南方)
-1. [上官正义受到国家卫健委的邀请](https://so.toutiao.com/search?keyword=上官正义受到国家卫健委的邀请)
-1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
 1. [美媒：中美元首会晤是全球稳定的胜利](https://so.toutiao.com/search?keyword=美媒：中美元首会晤是全球稳定的胜利)
-1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
 1. [赖清德扬言“我当选最和平”遭质疑](https://so.toutiao.com/search?keyword=赖清德扬言“我当选最和平”遭质疑)
-1. [大陆货轮经台湾海峡被喊话后霸气回话](https://so.toutiao.com/search?keyword=大陆货轮经台湾海峡被喊话后霸气回话)
 1. [黎以边境附近地区遭火箭弹袭击](https://so.toutiao.com/search?keyword=黎以边境附近地区遭火箭弹袭击)
 1. [爱德华兹：比赛后期康利让我别投了](https://so.toutiao.com/search?keyword=爱德华兹：比赛后期康利让我别投了)
 1. [男子割喉杀害妻子 4岁儿子目睹全程](https://so.toutiao.com/search?keyword=男子割喉杀害妻子+4岁儿子目睹全程)
@@ -67,7 +89,6 @@
 1. [华为官宣：2道题悬赏200万](https://so.toutiao.com/search?keyword=华为官宣：2道题悬赏200万)
 1. [剧组高校拍摄用激光笔扫射驱赶学生](https://so.toutiao.com/search?keyword=剧组高校拍摄用激光笔扫射驱赶学生)
 1. [杰夫·格林对阵掘金高效砍15分4板](https://so.toutiao.com/search?keyword=杰夫·格林对阵掘金高效砍15分4板)
-1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
 1. [红十字国际委员会呼吁保护加沙平民](https://so.toutiao.com/search?keyword=红十字国际委员会呼吁保护加沙平民)
 1. [保罗3中0仅得到2分1板5助](https://so.toutiao.com/search?keyword=保罗3中0仅得到2分1板5助)
 1. [以总统：马克龙的言论在以引发痛苦](https://so.toutiao.com/search?keyword=以总统：马克龙的言论在以引发痛苦)
@@ -135,7 +156,6 @@
 1. [《无价之宝》张译迎来年末首场考试](https://so.toutiao.com/search?keyword=《无价之宝》张译迎来年末首场考试)
 1. [陈丽君李云霄颠覆戏曲界和娱乐圈](https://so.toutiao.com/search?keyword=陈丽君李云霄颠覆戏曲界和娱乐圈)
 1. [拜登出席活动“犯迷糊”来回徘徊](https://so.toutiao.com/search?keyword=拜登出席活动“犯迷糊”来回徘徊)
-1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
 1. [李佳琦双十一收入超250亿](https://so.toutiao.com/search?keyword=李佳琦双十一收入超250亿)
 1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
 1. [联合国在加沙已收容78万流离失所者](https://so.toutiao.com/search?keyword=联合国在加沙已收容78万流离失所者)
