--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,55 +1,75 @@
 # 2023-11-13
 
-共 262 条
+共 281 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 17:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 13 2023 18:00:40 GMT+0800 (China Standard Time) -->
 1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
-1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
+1. [黄日华友谊赛中踹贵州球员引争议](https://so.toutiao.com/search?keyword=黄日华友谊赛中踹贵州球员引争议)
 1. [流感高发季防治指南请收好](https://so.toutiao.com/search?keyword=流感高发季防治指南请收好)
-1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
-1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
-1. [河北一罐车疑气体泄漏车顶直接爆开](https://so.toutiao.com/search?keyword=河北一罐车疑气体泄漏车顶直接爆开)
-1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
-1. [知情人称缅北电诈成员劝降视频属实](https://so.toutiao.com/search?keyword=知情人称缅北电诈成员劝降视频属实)
-1. [大连万达集团被强制执行1.6亿](https://so.toutiao.com/search?keyword=大连万达集团被强制执行1.6亿)
+1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
+1. [企业家被约谈后跳楼身亡 公司发讣告](https://so.toutiao.com/search?keyword=企业家被约谈后跳楼身亡+公司发讣告)
+1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
+1. [中国拥有千万净资产家庭达211万户](https://so.toutiao.com/search?keyword=中国拥有千万净资产家庭达211万户)
+1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
 1. [重庆辟谣一商场现“最强钉子户”](https://so.toutiao.com/search?keyword=重庆辟谣一商场现“最强钉子户”)
 1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
-1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
+1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
 1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
+1. [申京：约基奇今天不是我的偶像](https://so.toutiao.com/search?keyword=申京：约基奇今天不是我的偶像)
+1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
+1. [媒体评旅游客车被逼停](https://so.toutiao.com/search?keyword=媒体评旅游客车被逼停)
 1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
-1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
-1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
-1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
+1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
 1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
 1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
-1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
-1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
-1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
-1. [以色列军车闯巴勒斯坦遇爆炸袭击](https://so.toutiao.com/search?keyword=以色列军车闯巴勒斯坦遇爆炸袭击)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
-1. [外交部：支持旨在恢复巴以和平举措](https://so.toutiao.com/search?keyword=外交部：支持旨在恢复巴以和平举措)
-1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
+1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
+1. [广东打响撤区复镇第一枪](https://so.toutiao.com/search?keyword=广东打响撤区复镇第一枪)
+1. [曝白宫担忧以在黎巴嫩境内军事行动](https://so.toutiao.com/search?keyword=曝白宫担忧以在黎巴嫩境内军事行动)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
+1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
 1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
-1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
-1. [企业家被约谈后跳楼身亡 公司发讣告](https://so.toutiao.com/search?keyword=企业家被约谈后跳楼身亡+公司发讣告)
+1. [任泽平分析双十一消费五大新趋势](https://so.toutiao.com/search?keyword=任泽平分析双十一消费五大新趋势)
+1. [股市起起落落 我们该如何正确面对](https://so.toutiao.com/search?keyword=股市起起落落+我们该如何正确面对)
+1. [加沙最大医院停止运转 外交部回应](https://so.toutiao.com/search?keyword=加沙最大医院停止运转+外交部回应)
+1. [七旬老人去晨跑摔成髋关节骨折](https://so.toutiao.com/search?keyword=七旬老人去晨跑摔成髋关节骨折)
+1. [科尔：球队错失了一些空位三分机会](https://so.toutiao.com/search?keyword=科尔：球队错失了一些空位三分机会)
+1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
+1. [伊拉克前总统称赞中国对巴问题立场](https://so.toutiao.com/search?keyword=伊拉克前总统称赞中国对巴问题立场)
+1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
 1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
+1. [近九成受访者认为中美应健康发展](https://so.toutiao.com/search?keyword=近九成受访者认为中美应健康发展)
+1. [掘金主帅：火箭已是截然不同的队伍](https://so.toutiao.com/search?keyword=掘金主帅：火箭已是截然不同的队伍)
+1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
+1. [河北一罐车疑气体泄漏车顶直接爆开](https://so.toutiao.com/search?keyword=河北一罐车疑气体泄漏车顶直接爆开)
+1. [以色列将加沙“一分为二”有何企图](https://so.toutiao.com/search?keyword=以色列将加沙“一分为二”有何企图)
+1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [库里生涯罚球命中数达3515球](https://so.toutiao.com/search?keyword=库里生涯罚球命中数达3515球)
+1. [媒体人：广东不签大外或等徐杰回暖](https://so.toutiao.com/search?keyword=媒体人：广东不签大外或等徐杰回暖)
+1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
+1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
+1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
+1. [埃尔多安卷入土耳其司法危机](https://so.toutiao.com/search?keyword=埃尔多安卷入土耳其司法危机)
+1. [专家介绍冬季呼吸道疾病防治情况](https://so.toutiao.com/search?keyword=专家介绍冬季呼吸道疾病防治情况)
+1. [知情人称缅北电诈成员劝降视频属实](https://so.toutiao.com/search?keyword=知情人称缅北电诈成员劝降视频属实)
+1. [大连万达集团被强制执行1.6亿](https://so.toutiao.com/search?keyword=大连万达集团被强制执行1.6亿)
+1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
+1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
+1. [以色列军车闯巴勒斯坦遇爆炸袭击](https://so.toutiao.com/search?keyword=以色列军车闯巴勒斯坦遇爆炸袭击)
+1. [外交部：支持旨在恢复巴以和平举措](https://so.toutiao.com/search?keyword=外交部：支持旨在恢复巴以和平举措)
+1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
 1. [中国气象局：北方农业需防降温影响](https://so.toutiao.com/search?keyword=中国气象局：北方农业需防降温影响)
 1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
 1. [沃格尔：比尔是个战士](https://so.toutiao.com/search?keyword=沃格尔：比尔是个战士)
 1. [智能手机或将于2050年退场](https://so.toutiao.com/search?keyword=智能手机或将于2050年退场)
-1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
-1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
 1. [范弗里特：申京已经做得足够好了](https://so.toutiao.com/search?keyword=范弗里特：申京已经做得足够好了)
-1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
-1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
 1. [上官正义再次追问商丘妇幼保健院](https://so.toutiao.com/search?keyword=上官正义再次追问商丘妇幼保健院)
-1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
-1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
 1. [天津助学金当事人被举报利用打赏敛财](https://so.toutiao.com/search?keyword=天津助学金当事人被举报利用打赏敛财)
 1. [上官正义受到国家卫健委的邀请](https://so.toutiao.com/search?keyword=上官正义受到国家卫健委的邀请)
 1. [女篮奥运资格赛对手出炉](https://so.toutiao.com/search?keyword=女篮奥运资格赛对手出炉)
-1. [埃尔多安卷入土耳其司法危机](https://so.toutiao.com/search?keyword=埃尔多安卷入土耳其司法危机)
 1. [阿德巴约24分11板 热火118-113马刺](https://so.toutiao.com/search?keyword=阿德巴约24分11板+热火118-113马刺)
 1. [刘亦菲上海拍戏路透](https://so.toutiao.com/search?keyword=刘亦菲上海拍戏路透)
 1. [大陆货轮经台湾海峡被喊话后霸气回话](https://so.toutiao.com/search?keyword=大陆货轮经台湾海峡被喊话后霸气回话)
@@ -58,7 +78,6 @@
 1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
 1. [腾讯辟谣马化腾称阿里云不如腾讯云](https://so.toutiao.com/search?keyword=腾讯辟谣马化腾称阿里云不如腾讯云)
 1. [收评：A股三大指数震荡小幅收涨](https://so.toutiao.com/search?keyword=收评：A股三大指数震荡小幅收涨)
-1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
 1. [伊朗：应看清美阻挠加沙停火真面目](https://so.toutiao.com/search?keyword=伊朗：应看清美阻挠加沙停火真面目)
 1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
 1. [马斯克：中国聪明勤奋的人比美国多](https://so.toutiao.com/search?keyword=马斯克：中国聪明勤奋的人比美国多)
