--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,59 +1,88 @@
 # 2023-11-13
 
-共 300 条
+共 328 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 19:01:36 GMT+0800 (China Standard Time) -->
-1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
+<!-- 最后更新时间 Mon Nov 13 2023 20:09:07 GMT+0800 (China Standard Time) -->
 1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
+1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
 1. [流感高发季防治指南请收好](https://so.toutiao.com/search?keyword=流感高发季防治指南请收好)
-1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
-1. [多国爆发臭虫危机民众不敢去电影院](https://so.toutiao.com/search?keyword=多国爆发臭虫危机民众不敢去电影院)
-1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
 1. [国家气候中心：厄尔尼诺事件已形成](https://so.toutiao.com/search?keyword=国家气候中心：厄尔尼诺事件已形成)
+1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
+1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
 1. [英国前首相卡梅伦出任英外交大臣](https://so.toutiao.com/search?keyword=英国前首相卡梅伦出任英外交大臣)
-1. [常州华立是家怎样的企业](https://so.toutiao.com/search?keyword=常州华立是家怎样的企业)
-1. [以色列将加沙“一分为二”有何企图](https://so.toutiao.com/search?keyword=以色列将加沙“一分为二”有何企图)
+1. [泰国总理抵达美国准备出席APEC会议](https://so.toutiao.com/search?keyword=泰国总理抵达美国准备出席APEC会议)
+1. [中国高净值家庭现金流管理报告发布](https://so.toutiao.com/search?keyword=中国高净值家庭现金流管理报告发布)
 1. [多地可低价代缴采暖费？假的](https://so.toutiao.com/search?keyword=多地可低价代缴采暖费？假的)
-1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
+1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
 1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
 1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
-1. [张峻峰任中国海洋大学校长](https://so.toutiao.com/search?keyword=张峻峰任中国海洋大学校长)
+1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
 1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
-1. [日本大阪府部分居民血检异常](https://so.toutiao.com/search?keyword=日本大阪府部分居民血检异常)
-1. [英国内政大臣布雷弗曼被解职](https://so.toutiao.com/search?keyword=英国内政大臣布雷弗曼被解职)
+1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
 1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
-1. [宁王：Faker应该拿到第四个冠军了](https://so.toutiao.com/search?keyword=宁王：Faker应该拿到第四个冠军了)
+1. [律师谈校长强奸多名幼女被执行死刑](https://so.toutiao.com/search?keyword=律师谈校长强奸多名幼女被执行死刑)
+1. [卫健委：我国流感持续呈上升趋势](https://so.toutiao.com/search?keyword=卫健委：我国流感持续呈上升趋势)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
 1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
 1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
+1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
+1. [巴以冲突已致双方超1.25万人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超1.25万人死亡)
+1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
+1. [10月定期存款利率下调步伐放缓](https://so.toutiao.com/search?keyword=10月定期存款利率下调步伐放缓)
+1. [专家：冬季呼吸道疾病不要乱用药](https://so.toutiao.com/search?keyword=专家：冬季呼吸道疾病不要乱用药)
+1. [女乘客购票默认上铺？12306回应](https://so.toutiao.com/search?keyword=女乘客购票默认上铺？12306回应)
+1. [中国拥有千万净资产家庭达211万户](https://so.toutiao.com/search?keyword=中国拥有千万净资产家庭达211万户)
+1. [胡锡进：科研者说中国和西方差距大](https://so.toutiao.com/search?keyword=胡锡进：科研者说中国和西方差距大)
+1. [公众确诊病原学后如何用药治疗](https://so.toutiao.com/search?keyword=公众确诊病原学后如何用药治疗)
+1. [全国多地寒假时间确定](https://so.toutiao.com/search?keyword=全国多地寒假时间确定)
+1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
+1. [92岁妈妈把女儿家打造成从前模样](https://so.toutiao.com/search?keyword=92岁妈妈把女儿家打造成从前模样)
+1. [期货业协会会长安青松被带走调查](https://so.toutiao.com/search?keyword=期货业协会会长安青松被带走调查)
+1. [专家：日妄想违背和平宪法出口军火](https://so.toutiao.com/search?keyword=专家：日妄想违背和平宪法出口军火)
+1. [卫健委：我国呼吸道疾病进入高发季](https://so.toutiao.com/search?keyword=卫健委：我国呼吸道疾病进入高发季)
+1. [为何A股总是涨不起来](https://so.toutiao.com/search?keyword=为何A股总是涨不起来)
+1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
+1. [今年呼吸道疾病增多？专家回应](https://so.toutiao.com/search?keyword=今年呼吸道疾病增多？专家回应)
+1. [黄日华友谊赛中踹贵州球员](https://so.toutiao.com/search?keyword=黄日华友谊赛中踹贵州球员)
+1. [波帅：我们进了世界最佳球队4个球](https://so.toutiao.com/search?keyword=波帅：我们进了世界最佳球队4个球)
+1. [支原体肺炎今年为何如此“嚣张”](https://so.toutiao.com/search?keyword=支原体肺炎今年为何如此“嚣张”)
+1. [吃干锅被店员加错菜又挑出还多收8块](https://so.toutiao.com/search?keyword=吃干锅被店员加错菜又挑出还多收8块)
+1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
+1. [支原体肺炎相关网络科普不可轻信](https://so.toutiao.com/search?keyword=支原体肺炎相关网络科普不可轻信)
+1. [“百亿毒地案”涉及哪些法律问题](https://so.toutiao.com/search?keyword=“百亿毒地案”涉及哪些法律问题)
+1. [埃尔多安：内塔尼亚胡该离开了](https://so.toutiao.com/search?keyword=埃尔多安：内塔尼亚胡该离开了)
+1. [专家解答肺炎支原体感染热点问题](https://so.toutiao.com/search?keyword=专家解答肺炎支原体感染热点问题)
+1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [多国爆发臭虫危机民众不敢去电影院](https://so.toutiao.com/search?keyword=多国爆发臭虫危机民众不敢去电影院)
+1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
+1. [常州华立是家怎样的企业](https://so.toutiao.com/search?keyword=常州华立是家怎样的企业)
+1. [以色列将加沙“一分为二”有何企图](https://so.toutiao.com/search?keyword=以色列将加沙“一分为二”有何企图)
+1. [张峻峰任中国海洋大学校长](https://so.toutiao.com/search?keyword=张峻峰任中国海洋大学校长)
+1. [英国内政大臣布雷弗曼被解职](https://so.toutiao.com/search?keyword=英国内政大臣布雷弗曼被解职)
+1. [宁王：Faker应该拿到第四个冠军了](https://so.toutiao.com/search?keyword=宁王：Faker应该拿到第四个冠军了)
 1. [以色列军队称已控制加沙城码头](https://so.toutiao.com/search?keyword=以色列军队称已控制加沙城码头)
 1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
 1. [黎称其边境村镇多次遭以白磷弹袭击](https://so.toutiao.com/search?keyword=黎称其边境村镇多次遭以白磷弹袭击)
-1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
-1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
 1. [国足即将出征世预赛](https://so.toutiao.com/search?keyword=国足即将出征世预赛)
 1. [加沙一医生被炸死曾称不会抛下病人](https://so.toutiao.com/search?keyword=加沙一医生被炸死曾称不会抛下病人)
 1. [新冠流行形势如何？中疾控回应](https://so.toutiao.com/search?keyword=新冠流行形势如何？中疾控回应)
 1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
 1. [南方气温将再下一个台阶](https://so.toutiao.com/search?keyword=南方气温将再下一个台阶)
 1. [拼多多50元鞋利润3元每月挣七八千](https://so.toutiao.com/search?keyword=拼多多50元鞋利润3元每月挣七八千)
-1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
 1. [媒体人：广东不签大外或等徐杰回暖](https://so.toutiao.com/search?keyword=媒体人：广东不签大外或等徐杰回暖)
 1. [高盛：油价将保持在每桶80-100美元](https://so.toutiao.com/search?keyword=高盛：油价将保持在每桶80-100美元)
 1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
 1. [汪涵起诉代言品牌索赔1044万](https://so.toutiao.com/search?keyword=汪涵起诉代言品牌索赔1044万)
 1. [美欲改变中国的努力失败？中方回应](https://so.toutiao.com/search?keyword=美欲改变中国的努力失败？中方回应)
 1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
-1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
 1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
 1. [小男孩拼尽全力扶瘫痪妈妈上轮椅](https://so.toutiao.com/search?keyword=小男孩拼尽全力扶瘫痪妈妈上轮椅)
 1. [Bin公开喊话：相信theshy](https://so.toutiao.com/search?keyword=Bin公开喊话：相信theshy)
-1. [中国拥有千万净资产家庭达211万户](https://so.toutiao.com/search?keyword=中国拥有千万净资产家庭达211万户)
 1. [广东打响撤区复镇第一枪](https://so.toutiao.com/search?keyword=广东打响撤区复镇第一枪)
 1. [上官正义再次追问商丘妇幼保健院](https://so.toutiao.com/search?keyword=上官正义再次追问商丘妇幼保健院)
 1. [加沙希法医院病患死亡人数不断攀升](https://so.toutiao.com/search?keyword=加沙希法医院病患死亡人数不断攀升)
-1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
 1. [黄日华友谊赛中踹贵州球员引争议](https://so.toutiao.com/search?keyword=黄日华友谊赛中踹贵州球员引争议)
 1. [企业家被约谈后跳楼身亡 公司发讣告](https://so.toutiao.com/search?keyword=企业家被约谈后跳楼身亡+公司发讣告)
 1. [重庆辟谣一商场现“最强钉子户”](https://so.toutiao.com/search?keyword=重庆辟谣一商场现“最强钉子户”)
@@ -66,7 +95,6 @@
 1. [七旬老人去晨跑摔成髋关节骨折](https://so.toutiao.com/search?keyword=七旬老人去晨跑摔成髋关节骨折)
 1. [科尔：球队错失了一些空位三分机会](https://so.toutiao.com/search?keyword=科尔：球队错失了一些空位三分机会)
 1. [伊拉克前总统称赞中国对巴问题立场](https://so.toutiao.com/search?keyword=伊拉克前总统称赞中国对巴问题立场)
-1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
 1. [近九成受访者认为中美应健康发展](https://so.toutiao.com/search?keyword=近九成受访者认为中美应健康发展)
 1. [掘金主帅：火箭已是截然不同的队伍](https://so.toutiao.com/search?keyword=掘金主帅：火箭已是截然不同的队伍)
 1. [河北一罐车疑气体泄漏车顶直接爆开](https://so.toutiao.com/search?keyword=河北一罐车疑气体泄漏车顶直接爆开)
